@@ -2,7 +2,7 @@ CompositePack is distributed under the provisions of the Zope Public License
 (ZPL) v2.1.  See ZopePublicLicense.txt for the license text.
 
 
-Copyright (C) 2004 CompositePack Contributors:
+Copyright (C) 2004-2006 CompositePack Contributors:
 
   - Godefroid Chapelle (gotcha@bubblenet.be)
 
@@ -10,5 +10,5 @@ Copyright (C) 2004 CompositePack Contributors:
 
   - Riccardo Lemmi (riccardo@reflab.it)
 
-
+  - Duncan Booth (duncan.booth@suttoncourtenay.org.uk)
 
