@@ -1,3 +1,9 @@
+* set better layout and viewlet as default for navigation page
+  [gotcha]
+
+* styling and i18n
+  [gotcha]
+
 * setup portal factory and id calculated from title for Plone 2.1
   [gotcha]
  
